--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kamil Stawik Junior Frontend Developer</title>
-    <meta property="og:image" content="images/share.png">
+    <link rel="icon" href="https://github.com/KamilStawik/homepage/blob/main/images/logo1.png?raw=true">
+    <meta property="og:image" content="https://github.com/KamilStawik/homepage/blob/main/images/share1.png?raw=true">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" />
@@ -23,7 +24,6 @@
 
     <script defer src="js/script.js"></script>
 
-    <link rel="icon" href="/images/logo1.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
