js function reworked

--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
 
 <body class="wholeBody">
     <header>
-        <h1 class="webSiteTitle">Kamil Stawik Junior Frontend Developer</h1>
+        <h1 class="webSiteTitle js-webSiteTitle">Kamil Stawik Junior Frontend Developer</h1>
     </header>
     <div class="buttonContainer">
         <div class="buttonContainer__buttonBox">
-            <button class="jsButtonRemovingHeading buttonContainer__button">Usuń Nagłówek</button>
-            <button class="jsButtonChangingBackground buttonContainer__button">Nie chcę dalej czytać</button>
-            <button class="jsButtonNightReading buttonContainer__button">Tryb nocny</button>
+            <button class="js-buttonRemovingHeading buttonContainer__button">Usuń Nagłówek</button>
+            <button class="js-buttonNightReading buttonContainer__button">Tryb nocny</button>
         </div>
     </div>
     <nav>
@@ -56,7 +55,7 @@
     <main class="mainContent">
         <section id="sekcja-o-mnie">
             <h2 class="mainHeading">Sekcja o mnie</h2>
-            <article class="article">
+            <article class="article js-article">
                 <h3>I co ja robię tu, u-u</h3>
 
                 <p>Cześć,<br>
