nav and interestings list flex-box added

--- a/index.html
+++ b/index.html
@@ -84,23 +84,27 @@
 
             <article class="article">
                 <h3 id="moje-zainteresowania">Moje zainteresowania</h3>
-                <ul></ul>
-                <li>Podróże i zwiedzanie<br>
-                    <img src="https://c.pxhere.com/photos/a8/64/tourist_travel_sightseeing_building_venice-1295.jpg!d"
-                        alt="Zdjęcie z wycieczki" width="300" class="article__photography">
-                </li>
-                <li>Wycieczki motocyklowe<br>
-                    <img src="https://cdn.pixabay.com/photo/2014/08/11/18/30/motorcycle-415898_960_720.jpg"
-                        alt="Zdjęcie z wycieczki" width="300" class="article__photography">
-                </li>
-                <li>Gry komputerowe<br>
-                    <img src="https://p0.piqsels.com/preview/707/407/793/activity-adult-device-electronics.jpg"
-                        alt="Gra komputerowa" width="300" class="article__photography">
-                </li>
-                <li>Muzyka<br>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Linkin_Park-Rock_im_Park_2014-_by_2eight_DSC8742.jpg"
-                        alt="Zdjęcie zespołu" width="300" class="article__photography">
-                </li>
+                <ul class="article__interestsList">
+                    <li class="article__interestsListItem"><span class="article__interestsListItemTitle">Podróże i
+                            zwiedzanie</span><br>
+                        <img src="https://c.pxhere.com/photos/a8/64/tourist_travel_sightseeing_building_venice-1295.jpg!d"
+                            alt="Zdjęcie z wycieczki" width="300" class="article__photography">
+                    </li>
+                    <li class="article__interestsListItem"><span class="article__interestsListItemTitle">Wycieczki
+                            motocyklowe</span><br>
+                        <img src="https://cdn.pixabay.com/photo/2014/08/11/18/30/motorcycle-415898_960_720.jpg"
+                            alt="Zdjęcie z wycieczki" width="300" class="article__photography">
+                    </li>
+                    <li class="article__interestsListItem"><span class="article__interestsListItemTitle">Gry
+                            komputerowe</span><br>
+                        <img src="https://p0.piqsels.com/preview/707/407/793/activity-adult-device-electronics.jpg"
+                            alt="Gra komputerowa" width="300" class="article__photography">
+                    </li>
+                    <li class="article__interestsListItem"><span
+                            class="article__interestsListItemTitle">Muzyka</span><br>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Linkin_Park-Rock_im_Park_2014-_by_2eight_DSC8742.jpg"
+                            alt="Zdjęcie zespołu" width="300" class="article__photography">
+                    </li>
                 </ul>
             </article>
         </section>
