some minor updates

--- a/index.html
+++ b/index.html
@@ -59,26 +59,12 @@
                 <h3>I co ja robię tu, u-u</h3>
 
                 <p>Cześć,<br>
-                    Nazywam się Kamil i mam 32 lata. Edukację zasadniczą skończyłem już dość dawno i od tego czasu
-                    niewiele się
-                    rozwijałem. Obecnie pracuję w branży e-commerce, a wcześniej byłem handlowcem. Niestety obecne
-                    zajęcie daje
-                    mi
-                    coraz mniej satysfakcji i tak pojawił się pomysł na
-                    <strong>programowanie</strong>. Może nie tyle pojawił się z
-                    nikąd, co raczej
-                    wrócił. Pierwszy raz spotkałem się z programowaniem będąc jeszcze w liceum i już wtedy mocno
-                    mnie to
-                    zainteresowało. Studia również wybrałem pod tym kątem, ale nie udało mi się ich ukończyć.
+                    Nazywam się Kamil i mam 32 lata. Obecnie pracuję w branży e-commerce, a wcześniej byłem handlowcem. Niestety obecne zajęcie daje mi coraz mniej satysfakcji i tak pojawił się pomysł na <strong>programowanie</strong>. Może nie tyle pojawił się z nikąd, co raczej wrócił. Pierwszy raz spotkałem się z programowaniem będąc jeszcze w liceum i już wtedy mocno mnie to
+                    zainteresowało. Studia również wybrałem pod tym kątem, ale później z programowaniem nie było mi po drodze i na długo o nim zapomniałem.
                 </p>
                 <hr>
                 <p>
-                    Od pewnego czasu szukałem materiałów do nauki programowania i jak tylko zobaczyłem kurs YouCode
-                    od
-                    razu
-                    pomyślałem, że <i>to jest coś dla mnie.</i> Teraz ostro biorę się do pracy i nadrabiam
-                    zaległości :)
-
+                    Od początku 2021 roku uczę się HTMLa, CSSa i JavaScriptu, a na tej stronie znajdują się pierwsze wyniki tej pracy :)
                 </p>
             </article>
 
